Inicio da análise exploratória

--- a/projeto.ipynb
+++ b/projeto.ipynb
@@ -175,14 +175,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Entendimento do negócio"
+    "### Entendimento do negócio"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### O que os dados representam\n",
+    "#### O que os dados representam\n",
     "\n",
     "Estes dados representam um conjunto detalhado de informações sobre **propriedades residenciais (casas) que foram vendidas na cidade de Ames, Iowa, nos Estados Unidos**.\n",
     "\n",
@@ -203,7 +203,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Descrição das Colunas\n",
+    "#### Descrição das Colunas\n",
     "\n",
     "* **`Order`**: Número sequencial/ordem da linha no dataset.\n",
     "* **`PID`**: (Parcel ID) Identificador único do lote/propriedade.\n",
@@ -293,7 +293,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Seleção de 15 Features para Prever log10(SalePrice)"
+    "### Seleção de 15 Features para Prever log10(SalePrice)"
    ]
   },
   {
@@ -307,7 +307,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Features Selecionadas (15)"
+    "#### Features Selecionadas (15)"
    ]
   },
   {
@@ -344,7 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Justificativa\n",
+    "#### Justificativa\n",
     "\n",
     "* Este conjunto abrange dimensões cruciais para a precificação de imóveis:\n",
     "    * **Qualidade Geral:** `Overall.Qual`\n",
@@ -364,7 +364,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Observações Importantes\n",
+    "#### Observações Importantes\n",
     "\n",
     "* A seleção ótima pode variar conforme a metodologia específica (análise de correlação, feature importance de modelos como Florestas Aleatórias ou Gradient Boosting, Eliminação Recursiva de Features - RFE, etc.) e o algoritmo de machine learning escolhido.\n",
     "* Features ordinais (`Overall.Qual`, `Kitchen.Qual`, etc.) podem ser tratadas como numéricas (1, 2, 3...) ou categóricas (ex: One-Hot Encoding), exigindo diferentes pré-processamentos. A escolha pode depender do modelo.\n",
@@ -419,7 +419,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = load_selected_features(DATA_DIR)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Análise exploratória"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Análise global"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Conferindo os tipos de dados espiando as primeiras linhas do *dataset*:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -557,175 +587,148 @@
        "      <td>PConc</td>\n",
        "      <td>189900</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2925</th>\n",
-       "      <td>6</td>\n",
-       "      <td>1003</td>\n",
-       "      <td>1003.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1984</td>\n",
-       "      <td>1984</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Mitchel</td>\n",
-       "      <td>TA</td>\n",
-       "      <td>TA</td>\n",
-       "      <td>TA</td>\n",
-       "      <td>TA</td>\n",
-       "      <td>CBlock</td>\n",
-       "      <td>142500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2926</th>\n",
-       "      <td>5</td>\n",
-       "      <td>902</td>\n",
-       "      <td>864.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1983</td>\n",
-       "      <td>1983</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Mitchel</td>\n",
-       "      <td>TA</td>\n",
-       "      <td>Gd</td>\n",
-       "      <td>TA</td>\n",
-       "      <td>TA</td>\n",
-       "      <td>CBlock</td>\n",
-       "      <td>131000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2927</th>\n",
-       "      <td>5</td>\n",
-       "      <td>970</td>\n",
-       "      <td>912.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1992</td>\n",
-       "      <td>1992</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Mitchel</td>\n",
-       "      <td>TA</td>\n",
-       "      <td>Gd</td>\n",
-       "      <td>TA</td>\n",
-       "      <td>TA</td>\n",
-       "      <td>PConc</td>\n",
-       "      <td>132000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2928</th>\n",
-       "      <td>5</td>\n",
-       "      <td>1389</td>\n",
-       "      <td>1389.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1974</td>\n",
-       "      <td>1975</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Mitchel</td>\n",
-       "      <td>TA</td>\n",
-       "      <td>Gd</td>\n",
-       "      <td>TA</td>\n",
-       "      <td>Gd</td>\n",
-       "      <td>CBlock</td>\n",
-       "      <td>170000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2929</th>\n",
-       "      <td>7</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>996.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1993</td>\n",
-       "      <td>1994</td>\n",
-       "      <td>2</td>\n",
-       "      <td>9</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Mitchel</td>\n",
-       "      <td>TA</td>\n",
-       "      <td>Gd</td>\n",
-       "      <td>TA</td>\n",
-       "      <td>Ex</td>\n",
-       "      <td>PConc</td>\n",
-       "      <td>188000</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2930 rows × 16 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Overall.Qual  Gr.Liv.Area  Total.Bsmt.SF  Garage.Cars  Year.Built  \\\n",
-       "0                6         1656         1080.0          2.0        1960   \n",
-       "1                5          896          882.0          1.0        1961   \n",
-       "2                6         1329         1329.0          1.0        1958   \n",
-       "3                7         2110         2110.0          2.0        1968   \n",
-       "4                5         1629          928.0          2.0        1997   \n",
-       "...            ...          ...            ...          ...         ...   \n",
-       "2925             6         1003         1003.0          2.0        1984   \n",
-       "2926             5          902          864.0          2.0        1983   \n",
-       "2927             5          970          912.0          0.0        1992   \n",
-       "2928             5         1389         1389.0          2.0        1974   \n",
-       "2929             7         2000          996.0          3.0        1993   \n",
+       "   Overall.Qual  Gr.Liv.Area  Total.Bsmt.SF  Garage.Cars  Year.Built  \\\n",
+       "0             6         1656         1080.0          2.0        1960   \n",
+       "1             5          896          882.0          1.0        1961   \n",
+       "2             6         1329         1329.0          1.0        1958   \n",
+       "3             7         2110         2110.0          2.0        1968   \n",
+       "4             5         1629          928.0          2.0        1997   \n",
        "\n",
-       "      Year.Remod.Add  Full.Bath  TotRms.AbvGrd  Fireplaces Neighborhood  \\\n",
-       "0               1960          1              7           2        NAmes   \n",
-       "1               1961          1              5           0        NAmes   \n",
-       "2               1958          1              6           0        NAmes   \n",
-       "3               1968          2              8           2        NAmes   \n",
-       "4               1998          2              6           1      Gilbert   \n",
-       "...              ...        ...            ...         ...          ...   \n",
-       "2925            1984          1              6           0      Mitchel   \n",
-       "2926            1983          1              5           0      Mitchel   \n",
-       "2927            1992          1              6           0      Mitchel   \n",
-       "2928            1975          1              6           1      Mitchel   \n",
-       "2929            1994          2              9           1      Mitchel   \n",
+       "   Year.Remod.Add  Full.Bath  TotRms.AbvGrd  Fireplaces Neighborhood  \\\n",
+       "0            1960          1              7           2        NAmes   \n",
+       "1            1961          1              5           0        NAmes   \n",
+       "2            1958          1              6           0        NAmes   \n",
+       "3            1968          2              8           2        NAmes   \n",
+       "4            1998          2              6           1      Gilbert   \n",
        "\n",
-       "     Kitchen.Qual Bsmt.Qual Exter.Qual Heating.QC Foundation  SalePrice  \n",
-       "0              TA        TA         TA         Fa     CBlock     215000  \n",
-       "1              TA        TA         TA         TA     CBlock     105000  \n",
-       "2              Gd        TA         TA         TA     CBlock     172000  \n",
-       "3              Ex        TA         Gd         Ex     CBlock     244000  \n",
-       "4              TA        Gd         TA         Gd      PConc     189900  \n",
-       "...           ...       ...        ...        ...        ...        ...  \n",
-       "2925           TA        TA         TA         TA     CBlock     142500  \n",
-       "2926           TA        Gd         TA         TA     CBlock     131000  \n",
-       "2927           TA        Gd         TA         TA      PConc     132000  \n",
-       "2928           TA        Gd         TA         Gd     CBlock     170000  \n",
-       "2929           TA        Gd         TA         Ex      PConc     188000  \n",
-       "\n",
-       "[2930 rows x 16 columns]"
+       "  Kitchen.Qual Bsmt.Qual Exter.Qual Heating.QC Foundation  SalePrice  \n",
+       "0           TA        TA         TA         Fa     CBlock     215000  \n",
+       "1           TA        TA         TA         TA     CBlock     105000  \n",
+       "2           Gd        TA         TA         TA     CBlock     172000  \n",
+       "3           Ex        TA         Gd         Ex     CBlock     244000  \n",
+       "4           TA        Gd         TA         Gd      PConc     189900  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "load_selected_features(DATA_DIR)"
+    "df.head(n=5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Verificando quantos exemplos temos, e qual o tipo de dados identificado pelo Pandas para cada coluna:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2930 entries, 0 to 2929\n",
+      "Data columns (total 16 columns):\n",
+      " #   Column          Non-Null Count  Dtype  \n",
+      "---  ------          --------------  -----  \n",
+      " 0   Overall.Qual    2930 non-null   int64  \n",
+      " 1   Gr.Liv.Area     2930 non-null   int64  \n",
+      " 2   Total.Bsmt.SF   2929 non-null   float64\n",
+      " 3   Garage.Cars     2929 non-null   float64\n",
+      " 4   Year.Built      2930 non-null   int64  \n",
+      " 5   Year.Remod.Add  2930 non-null   int64  \n",
+      " 6   Full.Bath       2930 non-null   int64  \n",
+      " 7   TotRms.AbvGrd   2930 non-null   int64  \n",
+      " 8   Fireplaces      2930 non-null   int64  \n",
+      " 9   Neighborhood    2930 non-null   object \n",
+      " 10  Kitchen.Qual    2930 non-null   object \n",
+      " 11  Bsmt.Qual       2850 non-null   object \n",
+      " 12  Exter.Qual      2930 non-null   object \n",
+      " 13  Heating.QC      2930 non-null   object \n",
+      " 14  Foundation      2930 non-null   object \n",
+      " 15  SalePrice       2930 non-null   int64  \n",
+      "dtypes: float64(2), int64(8), object(6)\n",
+      "memory usage: 366.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aqui nós garantimos que no dataset com as features selecionadas está com 9 features numéricas e 6 categóricas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_no_dups = df.drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 2923 entries, 0 to 2929\n",
+      "Data columns (total 16 columns):\n",
+      " #   Column          Non-Null Count  Dtype  \n",
+      "---  ------          --------------  -----  \n",
+      " 0   Overall.Qual    2923 non-null   int64  \n",
+      " 1   Gr.Liv.Area     2923 non-null   int64  \n",
+      " 2   Total.Bsmt.SF   2922 non-null   float64\n",
+      " 3   Garage.Cars     2922 non-null   float64\n",
+      " 4   Year.Built      2923 non-null   int64  \n",
+      " 5   Year.Remod.Add  2923 non-null   int64  \n",
+      " 6   Full.Bath       2923 non-null   int64  \n",
+      " 7   TotRms.AbvGrd   2923 non-null   int64  \n",
+      " 8   Fireplaces      2923 non-null   int64  \n",
+      " 9   Neighborhood    2923 non-null   object \n",
+      " 10  Kitchen.Qual    2923 non-null   object \n",
+      " 11  Bsmt.Qual       2844 non-null   object \n",
+      " 12  Exter.Qual      2923 non-null   object \n",
+      " 13  Heating.QC      2923 non-null   object \n",
+      " 14  Foundation      2923 non-null   object \n",
+      " 15  SalePrice       2923 non-null   int64  \n",
+      "dtypes: float64(2), int64(8), object(6)\n",
+      "memory usage: 388.2+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_no_dups.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O *dataset* sem linhas duplicadas tem tamanho diferente do *dataset* original, indicando que existiam linhas duplicadas de qualquer forma."
    ]
   }
  ],
