Terminado análise exploratória preliminar

--- a/projeto.ipynb
+++ b/projeto.ipynb
@@ -1670,27 +1670,34 @@
     "\n",
     "***Neighborhood***\n",
     "\n",
-    "Casos raros presentes nas qualidades 1, 2, 9 e 10\n",
+    "Casos raros presentes em Landmrk e GrnHill\n",
     "\n",
     "***Kitchen.Qual***\n",
     "\n",
-    "Casos raros ocorrem em garagens com nenhum carro (0 carros) e acima de três carros (4 ou mais carros)\n",
+    "Casos raros presentes em Po\n",
     "\n",
     "***Bsmt.Qual***\n",
     "\n",
-    "Casos raros ocorrem em imóveis com nenhum banheiro (0 banheiros) e acima de dois banheiros (3 ou mais banheiros)\n",
+    "Casos raros presentes em Po\n",
     "\n",
     "***Exter.Qual***\n",
     "\n",
-    "Casos raros ocorrem em imóveis com menos de quatro cômodos (3 ou menos cômodos) e acima de oito cômodos (9 ou mais cômodos)\n",
+    "Casos raros presentes em Po\n",
     "\n",
     "***Heating.QC***\n",
     "\n",
-    "Casos raros ocorrem em imóveis com mais de 1 lareira (2 ou mais lareiras)\n",
+    "Casos raros presentes em Po\n",
     "\n",
     "***Foundation***\n",
     "\n",
-    "Casos raros ocorrem em imóveis com mais de 1 lareira (2 ou mais lareiras)"
+    "Casos raros presentes em Wood e Stone"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Filtragem"
    ]
   }
  ],
