--- a/projeto.ipynb
+++ b/projeto.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
        "4           TA        Gd         TA         Gd      PConc     189900  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +921,7 @@
        "max       2010.000000     4.000000      15.000000     4.000000  755000.000000  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1114,7 +1114,7 @@
        "SalePrice       160000.0  213500.00  755000.0  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1132,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1307,7 +1307,7 @@
        "SalePrice       213500.00  755000.0  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1329,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1400,7 +1400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1412,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1497,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1565,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1619,7 +1619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1702,7 +1702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1762,27 +1762,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "from sklearn.model_selection import train_test_split, GridSearchCV, cross_val_score\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV, cross_val_score, RandomizedSearchCV\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder, PolynomialFeatures\n",
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.dummy import DummyRegressor\n",
     "from sklearn.linear_model import LinearRegression, Ridge, Lasso\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.metrics import mean_squared_error, r2_score\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1796,7 +1795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1806,7 +1805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1836,7 +1835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1888,9 +1887,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/vitorraia/Documents/Documentos_Insper/Materias_4_Semestre/Machine_Learning/projeto_ames/.venv/lib/python3.12/site-packages/sklearn/model_selection/_search.py:317: UserWarning: The total space of parameters 4 is smaller than n_iter=20. Running 4 iterations. For exhaustive searches, use GridSearchCV.\n",
+      "  warnings.warn(\n",
+      "/Users/vitorraia/Documents/Documentos_Insper/Materias_4_Semestre/Machine_Learning/projeto_ames/.venv/lib/python3.12/site-packages/sklearn/model_selection/_search.py:317: UserWarning: The total space of parameters 4 is smaller than n_iter=20. Running 4 iterations. For exhaustive searches, use GridSearchCV.\n",
+      "  warnings.warn(\n",
+      "/Users/vitorraia/Documents/Documentos_Insper/Materias_4_Semestre/Machine_Learning/projeto_ames/.venv/lib/python3.12/site-packages/sklearn/model_selection/_search.py:317: UserWarning: The total space of parameters 2 is smaller than n_iter=20. Running 2 iterations. For exhaustive searches, use GridSearchCV.\n",
+      "  warnings.warn(\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1915,6 +1926,7 @@
        "      <th>model</th>\n",
        "      <th>best_params</th>\n",
        "      <th>cv_rmse</th>\n",
+       "      <th>estimator</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1922,75 +1934,112 @@
        "      <th>2</th>\n",
        "      <td>ridge</td>\n",
        "      <td>{'model__alpha': 10.0}</td>\n",
-       "      <td>0.054257</td>\n",
+       "      <td>0.054256</td>\n",
+       "      <td>(ColumnTransformer(transformers=[('num',\\n    ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>linear</td>\n",
        "      <td>{}</td>\n",
        "      <td>0.054611</td>\n",
+       "      <td>(ColumnTransformer(transformers=[('num',\\n    ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>poly+linear</td>\n",
        "      <td>{'model__alpha': 10.0}</td>\n",
        "      <td>0.055896</td>\n",
+       "      <td>(ColumnTransformer(transformers=[('num',\\n    ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>lasso</td>\n",
        "      <td>{'model__alpha': 0.001}</td>\n",
        "      <td>0.056841</td>\n",
+       "      <td>(ColumnTransformer(transformers=[('num',\\n    ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>dummy</td>\n",
        "      <td>{}</td>\n",
        "      <td>0.145272</td>\n",
+       "      <td>(ColumnTransformer(transformers=[('num',\\n    ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         model              best_params   cv_rmse\n",
-       "2        ridge   {'model__alpha': 10.0}  0.054257\n",
-       "1       linear                       {}  0.054611\n",
-       "4  poly+linear   {'model__alpha': 10.0}  0.055896\n",
-       "3        lasso  {'model__alpha': 0.001}  0.056841\n",
-       "0        dummy                       {}  0.145272"
+       "         model              best_params   cv_rmse  \\\n",
+       "2        ridge   {'model__alpha': 10.0}  0.054256   \n",
+       "1       linear                       {}  0.054611   \n",
+       "4  poly+linear   {'model__alpha': 10.0}  0.055896   \n",
+       "3        lasso  {'model__alpha': 0.001}  0.056841   \n",
+       "0        dummy                       {}  0.145272   \n",
+       "\n",
+       "                                           estimator  \n",
+       "2  (ColumnTransformer(transformers=[('num',\\n    ...  \n",
+       "1  (ColumnTransformer(transformers=[('num',\\n    ...  \n",
+       "4  (ColumnTransformer(transformers=[('num',\\n    ...  \n",
+       "3  (ColumnTransformer(transformers=[('num',\\n    ...  \n",
+       "0  (ColumnTransformer(transformers=[('num',\\n    ...  "
       ]
      },
-     "execution_count": 81,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
+    "from sklearn.model_selection import RandomizedSearchCV, cross_val_score\n",
+    "import numpy as np\n",
+    "\n",
     "results = []\n",
     "for name, mp in models.items():\n",
-    "    gs = GridSearchCV(\n",
-    "        mp['pipeline'],\n",
-    "        mp['params'],\n",
-    "        cv=5,\n",
-    "        scoring='neg_root_mean_squared_error',\n",
-    "        n_jobs=-1\n",
-    "    )\n",
-    "    gs.fit(X_train, y_train)\n",
-    "    best_rmse = -gs.best_score_\n",
-    "    results.append({\n",
-    "        'model': name,\n",
-    "        'best_params': gs.best_params_,\n",
-    "        'cv_rmse': best_rmse\n",
-    "    })\n",
+    "    pipeline = mp['pipeline']\n",
+    "    params   = mp['params']\n",
     "    \n",
+    "    if not params:\n",
+    "        # modelo sem hiperparâmetros: rodar CV direto\n",
+    "        scores = cross_val_score(\n",
+    "            pipeline, X_train, y_train,\n",
+    "            cv=5,\n",
+    "            scoring='neg_root_mean_squared_error',\n",
+    "            n_jobs=-1\n",
+    "        )\n",
+    "        cv_rmse     = -scores.mean()\n",
+    "        best_params = {}\n",
+    "        # ajustar de uma vez pra usar depois\n",
+    "        pipeline.fit(X_train, y_train)\n",
+    "        best_est    = pipeline\n",
+    "    else:\n",
+    "        rnd = RandomizedSearchCV(\n",
+    "            pipeline,\n",
+    "            param_distributions=params,\n",
+    "            n_iter=20,\n",
+    "            cv=5,\n",
+    "            scoring='neg_root_mean_squared_error',\n",
+    "            random_state=42,\n",
+    "            n_jobs=-1\n",
+    "        )\n",
+    "        rnd.fit(X_train, y_train)\n",
+    "        cv_rmse     = -rnd.best_score_\n",
+    "        best_params = rnd.best_params_\n",
+    "        best_est    = rnd.best_estimator_\n",
+    "    \n",
+    "    results.append({\n",
+    "        'model':      name,\n",
+    "        'best_params': best_params,\n",
+    "        'cv_rmse':    cv_rmse,\n",
+    "        'estimator':  best_est\n",
+    "    })\n",
+    "\n",
     "cv_results = pd.DataFrame(results).sort_values('cv_rmse')\n",
-    "cv_results\n"
+    "display(cv_results)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -2042,7 +2091,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
