Dados filtrados prontos

--- a/projeto.ipynb
+++ b/projeto.ipynb
@@ -1699,6 +1699,59 @@
    "source": [
     "### Filtragem"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def get_valid_rows(data: pd.DataFrame) -> pd.Series:\n",
+    "    '''Returns a boolean Series indicating which rows of a DataFrame are valid.\n",
+    "\n",
+    "    Args:\n",
+    "        data: A pandas DataFrame.\n",
+    "\n",
+    "    Returns:\n",
+    "        A boolean Series indicating which rows of the input DataFrame are valid.\n",
+    "    '''\n",
+    "    valid_rows = (\n",
+    "        (data['Overall.Qual'] > 3) & (data['Overall.Qual'] < 10) &\n",
+    "        (data['Garage.Cars'] > 0) & (data['Garage.Cars'] < 4) &\n",
+    "        (data['Full.Bath'] > 0) & (data['Full.Bath'] < 3) &\n",
+    "        (data['TotRms.AbvGrd'] > 3) & (data['TotRms.AbvGrd'] < 9) &\n",
+    "        (data['Fireplaces'] < 2)\n",
+    "    )\n",
+    "\n",
+    "    valid_rows &= (\n",
+    "        (data['Neighborhood'] != \"Landmrk\") &\n",
+    "        (data['Neighborhood'] != \"GrnHill\") &\n",
+    "        (data['Kitchen.Qual'] != \"Po\") &\n",
+    "        (data['Bsmt.Qual'] != \"Po\") &\n",
+    "        (data['Exter.Qual'] != \"Po\") &\n",
+    "        (data['Heating.QC'] != \"Po\") &\n",
+    "        (data['Foundation'] != \"Wood\") &\n",
+    "        (data['Foundation'] != \"Stone\")\n",
+    "    )\n",
+    "\n",
+    "    return valid_rows\n",
+    "\n",
+    "def filter_data(data: pd.DataFrame) -> pd.DataFrame:\n",
+    "    '''Filters a DataFrame to remove invalid rows.\n",
+    "\n",
+    "    Args:\n",
+    "        data: A pandas DataFrame.\n",
+    "\n",
+    "    Returns:\n",
+    "        A pandas DataFrame with invalid rows removed.\n",
+    "    '''\n",
+    "    valid_rows = get_valid_rows(data)\n",
+    "    return data[valid_rows]\n",
+    "\n",
+    "filtered_data = filter_data(data)"
+   ]
   }
  ],
  "metadata": {
