Argumento das correlações prontas

--- a/projeto.ipynb
+++ b/projeto.ipynb
@@ -2077,6 +2077,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Podemos observar que não há correlações extremamente altas entre as features numéricas, sendo a mior correlação de 0.73, então indica que não há necessidade de fazer novas alterações nos dados. Para confirmar isso, vamos agora acrescentar a correlação das feautures com o target."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
@@ -2138,6 +2145,13 @@
     "    vmin=-1,\n",
     "    vmax=1,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aqui obervamos que a correlação entre as feautures e o target está no nível de média a alta, sendo a maioria das correlações acima de 0.5 e a maior correlação sendo de 0.79. Isso indica que nossos dados fornecem muitas informações sobre o target do nosso projeto para o modelo de Machine Learning."
    ]
   },
   {
